[package]
name = "subsniffer"       # binary name
version = "0.1.0"                   # project version
edition = "2024"                    # rust edition
authors = ["Saurabh Soni <saurabh@mail.com>"]
description = "A tool for subdomain enumerating"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.45", features = ["full"] }
trust-dns-resolver = "0.20"
